# pyqt-openai

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.txt  MANIFEST.in  Makefile  README.kr.md  README.md  pyproject.toml  requirements.txt  setup.py  version_info.txt
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
pyqt_openai/: AIWidget.py  __init__.py  a.py  aa.py  aboutDialog.py  apiData.py  apiDataInit.py  apiDialog.py  apiWidget.py  c.py  chatGPTImportDialog.py  chatNavWidget.py  chatWidget.py  circleProfileImage.py  clickableTooltip.py  commandCompleter.py  commandSuggestionWidget.py  config_loader.py  constants.py  conv.json  convListWidget.py  convTableWidget.py  customizeDialog.py  diff.txt  doNotAskAgainDialog.py  exportDialog.py  findPathWidget.py  fontWidget.py  globals.py  home.py  importDialog.py  inputDialog.py  jsonTextEdit.py  leftSideBar.py  main.py  mainWindow.py  modelTable.py  models.py  notifier.py  openAiChatBotWidget.py  (+17 more)
pyqt_openai/chat_widget/: __init__.py  aiChatUnit.py  chatBrowser.py  chatGPTImportDialog.py  chatGPTImportManualDialog.py  chatImportDialog.py  chatMainWidget.py  chatNavWidget.py  chatThread.py  chatUnit.py  chatWidget.py  commandCompleter.py  commandSuggestionWidget.py  conv.db  convUnitResultDialog.py  exportDialog.py  findTextWidget.py  generalImportDialog.py  importDialog.py  jsonTextEdit.py  llamaIndexThread.py  llamaOpenAIThread.py  menuWidget.py  messageResultDialog.py  messageTextBrowser.py  openAiChatBotWidget.py  prompt.py  textEditPrompt.py  textEditPromptGroup.py  textEditPropmtGroup.py  uploadedFileWidget.py  uploadedImageFileWidget.py  userChatUnit.py
pyqt_openai/chat_widget/center/: aiChatUnit.py  chatBrowser.py  chatHome.py  chatUnit.py  chatWidget.py  commandCompleter.py  commandSuggestionWidget.py  findTextWidget.py  menuWidget.py  messageTextBrowser.py  prompt.py  realtimeApiWidget.py  responseInfoDialog.py  textEditPrompt.py  textEditPromptGroup.py  uploadedImageFileWidget.py  userChatUnit.py
pyqt_openai/chat_widget/left_sidebar/: chatImportDialog.py  chatNavWidget.py  exportDialog.py  importDialog.py  selectChatImportTypeDialog.py
pyqt_openai/chat_widget/prompt_gen_widget/: conv.db  formPage.py  importPromptManualDialog.py  promptCsvRightFormSampleDialog.py  promptEntryDirectInputDialog.py  promptGeneratorWidget.py  promptGroupDirectInputDialog.py  promptGroupExportDialog.py  promptGroupImportDialog.py  promptGroupInputDialog.py  promptGroupList.py  promptPage.py  promptTable.py  (+5 more)
pyqt_openai/customizeWidget/: customizeDialog.py  themeWidget.py
pyqt_openai/dalle_image_gen_widget/: dallEControlWidget.py  dallEImageGeneratingToolWidget.py  dallEWidget.py
pyqt_openai/dalle_widget/: dallEControlWidget.py  dallEWidget.py  dalleHome.py  dalleMainWidget.py  dalleRightSideBar.py  dalleThread.py  home.py
pyqt_openai/data/: data.jsonl
pyqt_openai/g4f_image_widget/: g4fImageHome.py  g4fImageMainWidget.py  g4fImageRightSideBar.py  g4fImageThread.py
pyqt_openai/gpt_widget/: aiChatUnit.py  chatBrowser.py  chatGPTImportManualDialog.py  chatImportDialog.py  chatNavWidget.py  chatWidget.py  exportDialog.py  findTextWidget.py  gptHome.py  gptMainWidget.py  gptThread.py  menuWidget.py  openAiChatBotWidget.py  prompt.py  responseInfoDialog.py  textEditPrompt.py  textEditPromptGroup.py  uploadedImageFileWidget.py  userChatUnit.py
pyqt_openai/image_gen_widget/: currentImageView.py  dallEControlWidget.py  explorerWidget.py  imageDallEPage.py  imageGeneratingToolWidget.py  imageListWidget.py  imageNavWidget.py  imageSqlite.py  imageStableDiffusionPage.py  leftSideBar.py  newImageGroupDialog.py  rightSideBar.py  rightWidget.py  thumbnailView.py  viewWidget.py
pyqt_openai/image_widget/: imageControlWidget.py  imageHome.py  imageMainWidget.py  imageNavWidget.py  imageThread.py
pyqt_openai/lang/: language_dict.py  translations.json  translations.py
pyqt_openai/llama_example/: pyqt-openai.txt  yjg30737.txt
pyqt_openai/prompt/: promptGeneratorWidget.py  promptInputDialog.py  promptUnitInputDialog.py  propPage.py  templatePage.py
pyqt_openai/prompt_command_completer/: commandSuggestionWidget.py
pyqt_openai/prompt_gen_widget/: promptGeneratorWidget.py  promptGroupInputDialog.py  propPage.py  propPromptUnitInputDialog.py  templatePage.py  templatePromptUnitInputDialog.py
pyqt_openai/prompt_res/: alex_brogan.json  awesome_chatgpt_prompts.json
pyqt_openai/propmt_command_completer/: commandSuggestionWidget.py
pyqt_openai/replicate_widget/: home.py  replicateControlWidget.py  replicateHome.py  replicateImageGeneratingToolWidget.py  replicateMainWidget.py  replicateRightSideBar.py  replicateThread.py  replicateWidget.py
pyqt_openai/res/: custom_widget.css  icon_button.css  icon_text_button.css  language_dict.py  menu_bar.css  theme.css  translations.json
pyqt_openai/right_sidebar/: LlamaPage.py  __init__.py  aiPlaygroundWidget.py  chatPage.py  completionPage.py  imagePage.py  rightSideBar.py
pyqt_openai/settings_dialog/: apiWidget.py  generalSettingsWidget.py  markdownSettingsWidget.py  settingsDialog.py  shortcutSettingsWidget.py  voiceSettingsWidget.py
pyqt_openai/test/: example.db  htmlformat.py  jsontosqlite.py  prompt.py  sqlalchemy_example.py  sqlite.py  test.py
pyqt_openai/theme/: script.py
pyqt_openai/util/: __init__.py  button_style_helper.py  common.py  llamaindex.py  llamapage_script.py  replicate.py  replicate_script.py  script.py
pyqt_openai/widgets/: APIInputButton.py  animationButton.py  baseNavWidget.py  button.py  checkBoxListWidget.py  checkBoxTableWidget.py  circleProfileImage.py  conv.db  fileTableDialog.py  findPathWidget.py  imageControlWidget.py  imageMainWidget.py  imageNavWidget.py  imageView.py  inputDialog.py  jsonEditor.py  linkLabel.py  modelInputManualDialog.py  modernButton.py  navWidget.py  normalImageView.py  notifier.py  questionTooltipLabel.py  randomImagePromptGeneratorWidget.py  readme.txt  scrollableErrorDialog.py  searchBar.py  showingKeyUserInputLineEdit.py  svgButton.py  svgLabel.py  svgToolButton.py  thumbnailView.py  toast.py  toolButton.py
(+88 files in other folders)
