[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyqt-openai"
version = "1.2.0"
description = "Python multipurpose chatbot that user can use GPT, other AI models altogether (Release Name: VividNode)"
authors = [{ name = "Jung Gyu Yoon", email = "yjg30737@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
dependencies = [
    "PySide6",
    "pyperclip",
    "jinja2",
    "requests",
    "pyaudio",

    "openai",
    "anthropic",
    "google-generativeai",
    "llama-index",
    "replicate",
]
keywords = ['openai', 'pyqt', 'pyqt5', 'pyqt6', 'pyside6', 'desktop', 'app', 'chatbot', 'gpt', 'replicate', 'gemini', 'claude', 'llama', 'llm']

requires-python = ">= 3.11"
# 3.11
# 3.12

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: User Interfaces"
]

[project.urls]
homepage = "https://github.com/yjg30737/pyqt-openai.git"

[tool.setuptools]
packages = ["pyqt_openai"]

[project.gui-scripts]
pyqt-openai = "pyqt_openai.main:main"